--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 
 header {
-    background-color: #007acc;
+    background-color: #2C3E50;
     color: white;
     position: fixed;
     top: 0; /* Aligns it at the top of the viewport */
@@ -64,7 +64,7 @@ header {
     
 
 .navbar-right a:hover {
-    color: #0a3048; /* Add a hover effect */
+    color: #007acc; /* Add a hover effect */
     animation: pulse 1s infinite;
 }
 
@@ -84,6 +84,33 @@ main {
 
 section {
     margin-bottom: 2rem;
+}
+
+/* about me section*/
+.about-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.about-card {
+    background: #f8f9fa;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.4s ease-in-out, box-shadow 0.4s ease-in-out;
+}
+
+.about-card h3 {
+    margin-bottom: 10px;
+    color: #007acc;
+}
+
+.about-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0, 122, 204, 0.6);
 }
 
 /* Courses Section */
@@ -137,15 +164,39 @@ hr.divider {
 }
 
 /* Experience Section */
+/* Centering the experience section */
 #experience {
     padding: 20px;
     background-color: #f9f9f9;
+    max-width: 1300px; /* Adjust the width as needed */
+    margin: 0 auto; /* Center the section */
+    text-align: center; /* Center text within the section */
 }
 
-h2 {
-    font-size: 1.8em;
+.timeline {
+    position: relative;
+    padding: 20px;
+    text-align: left; /* Keep timeline items left-aligned */
+}
+
+.timeline-item {
+    background-color: #f9f9f9;
+    padding: 15px;
+    border-left: 5px solid #7fd6fb;
     margin-bottom: 20px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: left; /* Ensure text in timeline items is left-aligned */
+}
+
+/* h2 headings througout the site*/
+h2 {
+    text-align: center;
+    text-decoration: underline;
+    font-size: 2rem;
+    font-weight: bold;
+    color: #007acc;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin-bottom: 20px;
 }
 /*
 .timeline {
@@ -230,8 +281,7 @@ table th {
 
 footer {
     text-align: center; /* Ensure footer is left-aligned */
-    padding: 1rem;
-    background: #007acc;
+    background: #2C3E50;
     color: #fff;
 }
 
